# rhdf5

./: .Rbuildignore  .gitignore  .travis.yml  404.html  BinaryFiles  CHANGES  DESCRIPTION  INDEX  NAMESPACE  README  README.md  TITLE  TODO  ToDo  _pkgdown.yml  authors.html  cleanup  cleanup.win  config.status  configure  configure.ac  configure.in  configure.win  index.html  paper.bib  pkgdown.yml  sitemap.xml
.github/: auto-comment.yml
.github/workflows/: amd64.yml  auto-comment.yml  draft-joss-paper.yml  main.yml  render-pkgdown.yml
R/: AllClass.R  AllMethods.R  H5.R  H5A.R  H5D.R  H5D_extras.R  H5F.R  H5G.R  H5I.R  H5L.R  H5O.R  H5O_extras.R  H5P.R  H5P_extras.R  H5R.R  H5S.R  H5S_extras.R  H5T.R  H5Z.R  H5constants.R  Rhdf5.R  attribs.R  coerce.R  dataset.R  dataspace.R  files.R  group.R  h5checktype.R  h5create.R  h5delete.R  h5dim.R  h5dump.R  h5errorHandling.R  h5exists.R  h5fileLocking.R  h5filters.R  h5ls.R  h5modifier.R  h5read.R  h5readAttributes.R  (+8 more)
articles/: index.html  practical_tips.html  rhdf5.html  rhdf5_cloud_reading.html
docs/reference/: H5A.html  H5Aclose.html  H5Acreate.html  H5Aexists.html  H5Aget_space.html  H5Aget_type.html  H5Aopen.html  H5Awrite.html  H5Dchunk_dims.html  H5Dclose.html  H5Dcreate.html  H5Dget_create_plist.html  H5Dget_space.html  H5Dget_storage_size.html  H5Dget_type.html  H5Dopen.html  H5Dread.html  H5Dwrite.html  H5F.html  H5Fcreate.html  H5Fget_name.html  H5Fget_plist.html  H5G.html  H5Gget_info.html  H5I.html  H5IdComponent-class.html  H5Iget_type.html  H5Iis_valid.html  H5L.html  H5Lcopy.html  H5Lcreate_external.html  H5Ldelete.html  H5Lexists.html  H5Lget_info.html  H5Lmove.html  H5O.html  H5Oclose.html  H5Oget_num_attrs.html  H5Oopen.html  H5P.html  (+77 more)
inst/: NEWS.Rd
inst/demoChunkSize/: demoChunkSize.R
inst/doc/: Rhdf5.Rnw  rhdf5.Rnw
inst/scripts/: Dockerfile  Readme.md  create_nullable_arrays.py
inst/testfiles/: h5ex_d_blosc.h5  h5ex_d_szip.h5  h5ex_t_array.h5  h5ex_t_cmpd.h5  h5ex_t_enum.h5  multiple_dtypes.h5  nullable_examples.h5
joss/: paper.bib  paper.md
longtests/: testthat.R
longtests/testthat/: test_h5read_highmem.R
man/: Extract.hdf5.Rd  H5.Rd  H5A.Rd  H5Aclose.Rd  H5Acreate.Rd  H5Adelete.Rd  H5Aexists.Rd  H5Aget_name.Rd  H5Aget_space.Rd  H5Aget_type.Rd  H5Aopen.Rd  H5Aread.Rd  H5Awrite.Rd  H5D.Rd  H5D_extras.Rd  H5Dchunk_dims.Rd  H5Dclose.Rd  H5Dcreate.Rd  H5Dget_create_plist.Rd  H5Dget_space.Rd  H5Dget_storage_size.Rd  H5Dget_type.Rd  H5Dopen.Rd  H5Dread.Rd  H5Dset_extent.Rd  H5Dwrite.Rd  H5F.Rd  H5Fclose.Rd  H5Fcreate.Rd  H5Fflush.Rd  H5Fget_filesize.Rd  H5Fget_name.Rd  H5Fget_plist.Rd  H5Fis_hdf5.Rd  H5Fopen.Rd  H5G.Rd  H5Gclose.Rd  H5Gcreate.Rd  H5Gcreate_anon.Rd  H5Gget_info.Rd  (+159 more)
reference/: H5.html  H5A.html  H5Aclose.html  H5Acreate.html  H5Adelete.html  H5Aexists.html  H5Aget_name.html  H5Aget_space.html  H5Aget_type.html  H5Aopen.html  H5Aread.html  H5Awrite.html  H5D.html  H5Dchunk_dims.html  H5Dclose.html  H5Dcreate.html  H5Dget_create_plist.html  H5Dget_space.html  H5Dget_storage_size.html  H5Dget_type.html  H5Dopen.html  H5Dread.html  H5Dset_extent.html  H5Dwrite.html  H5F.html  H5Fclose.html  H5Fcreate.html  H5Fflush.html  H5Fget_filesize.html  H5Fget_name.html  H5Fget_plist.html  H5Fis_hdf5.html  H5Fopen.html  H5G.html  H5Gclose.html  H5Gcreate.html  H5Gcreate_anon.html  H5Gget_info.html  H5Gopen.html  H5I.html  (+136 more)
src/: .H5D.c.swp  H5.c  H5.h  H5A.c  H5A.h  H5D.c  H5D.h  H5E.c  H5E.h  H5F.c  H5F.h  H5G.c  H5G.h  H5I.c  H5I.h  H5L.c  H5L.h  H5O.c  H5O.h  H5P.c  H5P.h  H5R.c  H5R.h  H5S.c  H5S.h  H5S_extras.c  H5T.c  H5T.h  H5T_extras.c  H5Z.c  H5Z.h  H5constants.c  H5constants.h  HandleList.cpp  HandleList.h  HandleList.hpp  HandleList2.h  HandleListWrap.c  HandleListcpp.h  Makevars  (+39 more)
src/hdf5/: Makefile  Makefile.in  config.lt  config.status  configure  configure.in  libtool
src/hdf5/src/: H5.lo  H5A.lo  H5AC.lo  H5Abtree2.lo  H5Adense.lo  H5Adeprec.lo  H5Aint.lo  H5Atest.lo  H5B.lo  H5B2.lo  H5B2cache.lo  H5B2dbg.lo  H5B2hdr.lo  H5B2int.lo  H5B2stat.lo  H5B2test.lo  H5Bcache.lo  H5Bdbg.lo  H5C.lo  H5CS.lo  H5D.lo  H5Dbtree.lo  H5Dchunk.lo  H5Dcompact.lo  H5Dcontig.lo  H5Ddbg.lo  H5Ddeprec.lo  H5Defl.lo  H5Dfill.lo  H5Dint.lo  H5Dio.lo  H5Dlayout.lo  H5Dmpio.lo  H5Doh.lo  H5Dscatgath.lo  H5Dselect.lo  H5Dtest.lo  H5E.lo  H5Edeprec.lo  H5Eint.lo  (+208 more)
src/hdf5/src/.deps/: H5.Plo  H5A.Plo  H5AC.Plo  H5Abtree2.Plo  H5Adense.Plo  H5Adeprec.Plo  H5Aint.Plo  H5Atest.Plo  H5B.Plo  H5B2.Plo  H5B2cache.Plo  H5B2dbg.Plo  H5B2hdr.Plo  H5B2int.Plo  H5B2stat.Plo  H5B2test.Plo  H5Bcache.Plo  H5Bdbg.Plo  H5C.Plo  H5CS.Plo  H5D.Plo  H5Dbtree.Plo  H5Dchunk.Plo  H5Dcompact.Plo  H5Dcontig.Plo  H5Ddbg.Plo  H5Ddeprec.Plo  H5Defl.Plo  H5Dfill.Plo  H5Dint.Plo  H5Dio.Plo  H5Dlayout.Plo  (+207 more)
src/hdf5source/: hdf5small.tgz
src/includeWin/: H5Dpkg.h  H5Fpkg.h  H5Fpublic.h  H5Gpkg.h  H5LTprivate.h  H5Opkg.h  H5Ppublic.h  H5api_adpt.h  H5f90i_gen.h  H5pubconf.h  H5public.h  SZconfig_i386.h  h5_dble_interface.mod  h5a.mod  h5d.mod  h5e.mod  h5f.mod  h5fortran_types.mod  h5g.mod  h5global.mod  h5i.mod  h5im.mod  h5l.mod  h5lib.mod  h5lt.mod  h5o.mod  h5p.mod  h5r.mod  h5s.mod  h5t.mod  h5tb.mod  h5z.mod  hdf5.mod
src/includeWin/i386/: H5config.h  H5pubconf.h  H5win32defs.h  SZconfig.h
src/includeWin/x64/: H5config.h  H5pubconf.h  H5win32defs.h
tests/: testthat.R
tests/testthat/: failing_tests.R  test_H5.R  test_H5A.R  test_H5D.R  test_H5D_extras.R  test_H5F.R  test_H5G.R  test_H5I.R  test_H5L.R  test_H5O.R  test_H5P.R  test_H5P_dcpl.R  test_H5P_fcpl.R  test_H5P_lcpl.R  test_H5R.R  test_H5S.R  test_H5T.R  test_H5T_extras.R  test_H5Z.R  test_H5close.R  test_Rhdf5.R  test_S3.R  test_errorReporting.R  test_external_filters.R  test_filters.R  test_h5constants.R  test_h5create.R  test_h5delete.R  test_h5dump.R  test_h5fileLocking.R  test_h5ls.R  test_h5read.R  test_h5readAttributes.R  test_h5save.R  test_h5set_extent.R  test_h5write.R  test_h5writeAttributes.R  test_methods.R  test_native.R  test_roundtrip.R
vignettes/: .rhdf5.R.swp  abridged.R  practical_tips.Rmd  rhdf5.R  rhdf5.Rmd  rhdf5.Rnw  rhdf5_cloud_reading.Rmd
(+2 files in other folders)
