dnl configure.in for hdf5, patterned on configure.in for RPgSQL
dnl Process this file with autoconf to produce a configure script.
AC_INIT
AC_PREREQ(2.52)
AC_REVISION($Revision: 1.2 $)
AC_CONFIG_SRCDIR(src/hdf5.c)

AC_DEFUN([CHECK_HDF5],
[AC_MSG_CHECKING(for hdf5)
AC_ARG_WITH(hdf5,
[ --with-hdf5=DIR root directory of hdf5 installation [defaults to
	/usr/local or /usr if not found in /usr/local]],
[if test x"$withval" != no ; then
	AC_MSG_RESULT(yes)
	HDF5_HOME="$withval"
else
	AC_MSG_RESULT(no)
fi],[
	AC_MSG_RESULT(yes)
	HDF5_HOME="/usr/local"
	if test ! -f "${HDF5_HOME}/include/hdf5.h"
	then
		HDF5_HOME="/usr"
	fi
])

if test -n "${HDF5_HOME}"
then
	HDF5_OLD_LDFLAGS=$LDFLAGS
	HDF5_OLD_CPPFLAGS=$CPPFLAGS
	LDFLAGS="$LDFLAGS -L${HDF5_HOME}/lib"
	CPPFLAGS="$CPPFLAGS -I${HDF5_HOME}/include"
	AC_LANG_SAVE
	AC_LANG_C
	AC_CHECK_LIB(hdf5,H5Fopen,[hdf5_cv_libhdf5=yes],[hdf5_cv_libhdf5=no])
	AC_CHECK_HEADER(hdf5.h,[hdf5_cv_hdf5_h=yes],[hdf5_cv_hdf5_h=no])
	AC_LANG_RESTORE
	if test "$hdf5_cv_libhdf5" = "yes" -a "$hdf5_cv_hdf5_h" = "yes"
	then
		AC_MSG_CHECKING(hdf5 in ${HDF5_HOME})
		PKG_LIBS="${PKG_LIBS} -L${HDF5_HOME}/lib -lhdf5"
		PKG_CPPFLAGS="${PKG_CPPFLAGS} -L${HDF5_HOME}/include"
		AC_MSG_RESULT(ok)
	else
		AC_MSG_CHECKING(hdf5 in ${HDF5_HOME})
		LDFLAGS="${HDF5_OLD_LDFLAGS}"
		CPPFLAGS="${HDF5_OLD_CPPFLAGS}"
		AC_MSG_RESULT(failed)
		AC_MSG_ERROR(please specify a valid hdf5 installation with --with-hdf5=DIR)
	fi
fi])


CHECK_HDF5
AC_SUBST(PKG_CPPFLAGS)
AC_SUBST(PKG_LIBS)
AC_OUTPUT(src/Makevars)
